# src/main/java/droni/backend/api/article/entity/Article.java
@@ -5,6 +5,7 @@ import droni.backend.api.article.dto.ArticleKind;
 import droni.backend.api.article.dto.ArticleTarget;
 import droni.backend.api.attacthfile.entity.DroniFile;
 import jakarta.persistence.*;
+import lombok.*;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -12,6 +13,8 @@ import java.util.List;
 
 @Entity
 @Table(name = "article")
+@Getter
+@NoArgsConstructor(access = AccessLevel.PROTECTED)
 public class Article {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -27,12 +30,18 @@ public class Article {
     @ManyToOne
     @JoinColumn(name = "display_image", referencedColumnName = "fileId")
     private DroniFile displayImage;
-
     @OneToMany(mappedBy = "article", cascade = {CascadeType.PERSIST, CascadeType.REMOVE}, orphanRemoval = true)
     private List<ArticleImageMapping> articleImageMappingList = new ArrayList<>();
-
     private LocalDateTime createdAt;
 
+    @Builder
+    public Article(String title, ArticleKind kind, String content, ArticleTarget target, DroniFile displayImage) {
+        this.title = title;
+        this.kind = kind;
+        this.content = content;
+        this.target = target;
+        this.displayImage = displayImage;
+    }
 
     public ArticleSummaryResponse toDto() {
         ArticleSummaryResponse dto = new ArticleSummaryResponse();
