# src/main/java/droni/backend/api/article/repository/ArticleQuerydslRepo.java
@@ -6,7 +6,7 @@ import droni.backend.api.article.entity.Article;
 import java.util.List;
 
 public interface ArticleQuerydslRepo {
-    List<Article> findMainArticleByTarget(ArticleTarget target);
+    List<Article> findHowToUseSummary(ArticleTarget target, int main_view_count);
 
-    List<Article> findMainDroneContent();
+    List<Article> findDroneContentSummary(int main_view_count);
 }
